force-app/main/default/objects/Quote/fields/AE_Edit_Count__c.field-meta.xml
<CustomField>
    <fullName>AE_Edit_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>AE 인라인 편집 횟수. FR-QUOTE-002.</description>
    <label>AE 편집 횟수</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>