force-app/main/default/objects/Quote/fields/AI_Draft_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Draft_Confidence__c</fullName>
    <description>AI 초안 신뢰도 0.00~1.00. FR-QUOTE-001. 0.6 미만은 경고.</description>
    <label>AI 초안 신뢰도</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>