force-app/main/default/objects/Quote/fields/Last_Clicked_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Clicked_At__c</fullName>
    <description>이메일 추적 링크 최근 클릭 시각. FR-QUOTE-006.</description>
    <label>최근 클릭 시각</label>
    <type>DateTime</type>
</CustomField>