force-app/main/default/objects/Quote/fields/Last_Opened_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Opened_At__c</fullName>
    <description>이메일 추적 픽셀 최근 열람 시각. FR-QUOTE-006.</description>
    <label>최근 열람 시각</label>
    <type>DateTime</type>
</CustomField>