force-app/main/default/objects/Quote/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>Quote 발송 일시. FR-QUOTE-005.</description>
    <label>발송 일시</label>
    <type>DateTime</type>
</CustomField>